Labs/internal-ingress.yaml
#ingress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: todoapp
  labels:
    app: todoapp
spec:
  containers:
  - image: "nginx"
    name: todoapp-image
    ports:
    - containerPort: 80
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: todoapp
spec:
  selector:
    app: todoapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp
  annotations:
    # add the HTTP listener and redirect config to AppGw
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "azure/application-gateway"
    appgw.ingress.kubernetes.io/use-private-ip: "true"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: appgw-cert
spec:
  rules:
  - host: todoapp-6797c564-zv5jp-dev.house.gov
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: todoapp
              port:
                number: 80
        pathType: Exact
